--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,14 @@ dependencies:
     sdk: flutter
   maplibre_gl_platform_interface:
     git:
-      url: https://github.com/maplibre/flutter-maplibre-gl.git
+      url: https://github.com/Mhamad-Salah/flutter-maplibre-gl.git
       path: maplibre_gl_platform_interface
-      ref: main
+      ref: heatmap
   maplibre_gl_web:
     git:
-      url: https://github.com/maplibre/flutter-maplibre-gl.git
+      url: https://github.com/Mhamad-Salah/flutter-maplibre-gl.git
       path: maplibre_gl_web
-      ref: main
+      ref: heatmap
 
 dependency_overrides:
   maplibre_gl_platform_interface:
