--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ apply plugin: 'com.android.library'
 
 android {
 
+    namespace: "com.mapbox.mapboxgl"
     compileSdkVersion 33
     ndkVersion "20.1.5948944"
 
